@@ -1,1 +1,2 @@
 usr/lib/*/pkgconfig/fimex.pc
+usr/lib/*/cmake/fimex
