@@ -1,0 +1,3 @@
+get_filename_component(SELF_DIR "${CMAKE_CURRENT_LIST_FILE}" DIRECTORY)
+get_filename_component(PARENT_DIR "${SELF_DIR}" DIRECTORY)
+include(${PARENT_DIR}/fimex@MINUS_FIMEX_VERSION@/fimex@MINUS_FIMEX_VERSION@-config.cmake)
