@@ -171,8 +171,8 @@ ENDIF()
 
 FOREACH(T ${CC_TESTS})
   ADD_EXECUTABLE(${T} "${T}.cc")
-  TARGET_INCLUDE_DIRECTORIES(${T} PRIVATE ${Boost_INCLUDE_DIRS})
-  TARGET_LINK_LIBRARIES(${T} libfimex testinghelpers ${Boost_LIBRARIES})
+  TARGET_INCLUDE_DIRECTORIES(${T} PRIVATE ${Boost_INCLUDE_DIRS} ${PC_INCLUDE_DIRS})
+  TARGET_LINK_LIBRARIES(${T} libfimex testinghelpers ${Boost_LIBRARIES} ${PC_LIBRARIES})
   ADD_TEST(NAME ${T} COMMAND ${T})
 ENDFOREACH()
 
